--- a/Clinicac-ftn/register.html
+++ b/Clinicac-ftn/register.html
@@ -34,60 +34,62 @@
     <main>
         <div class="register-container">
             <h2>Por favor, complete los campos</h2>
-            <form class="form-register" method="post" novalidate>
+            <form class="form-register" id="registerForm" novalidate>
                 <div class="form-fields">
-                <div>
-                    <label for="name">Nombre y apellido</label>
-                    <input type="text" name="name" id="name" size="30" required>
-                </div>
-                <div class="error" id="error-name"></div>
-                <div>
-                    <label for="mail">Correo electrónico</label>
-                    <input type="text" name="mail" id="mail" size="30" required>
-                </div>
-                <div class="error" id="error-mail"></div>
-                <div class="input-group">
-                    <label for="password">Contraseña</label>
-                    <div class="password-input">
-                        <input type="password" name="password" id="password" size="30" required>
-                        <span class="password-toggle-register" id="togglePassword"><i class="fa fa-eye" aria-hidden="true"></i></span>
+                    <div>
+                        <label for="name">Nombre y apellido</label>
+                        <input type="text" name="name" id="name" size="30" required>
                     </div>
-                </div>
-                <div class="error" id="error-password"></div>
-                <div class="input-group">
-                    <label for="repeatpw">Repetir contraseña</label>
-                    <div class="password-input">
-                        <input type="password" name="repeatpw" id="repeatpw" size="30" required>
-                        <span class="password-toggle-register" id="toggleRepeatPassword"><i class="fa fa-eye" aria-hidden="true"></i></span>
+                    <div class="error" id="error-name"></div>
+                    <div>
+                        <label for="mail">Correo electrónico</label>
+                        <input type="text" name="mail" id="mail" size="30" required>
                     </div>
-                </div>
-                <div class="error" id="error-repeatpw"></div>
-                <div>
-                    <label for="datepicker">Fecha de nacimiento</label>
-                    <input type="text" id="datepicker" name="datepicker">
-                </div>
-                <div class="error" id="error-datepicker"></div>
-                <div>
-                    <label for="country">País</label>
-                    <select name="country" id="country">
-                        <option value="">--Seleccione</option>
-                        <option value="AR">Argentina</option>
-                        <option value="BO">Bolivia</option>
-                        <option value="BR">Brasil</option>
-                    </select>
-                </div>
-                <div class="error" id="error-country"></div>
+                    <div class="error" id="error-mail"></div>
+                    <div class="input-group">
+                        <label for="password">Contraseña</label>
+                        <div class="password-input">
+                            <input type="password" name="password" id="password" size="30" required>
+                            <span class="password-toggle-register" id="togglePassword"><i class="fa fa-eye" aria-hidden="true"></i></span>
+                        </div>
+                    </div>
+                    <div class="error" id="error-password"></div>
+                    <div class="input-group">
+                        <label for="repeatpw">Repetir contraseña</label>
+                        <div class="password-input">
+                            <input type="password" name="repeatpw" id="repeatpw" size="30" required>
+                            <span class="password-toggle-register" id="toggleRepeatPassword"><i class="fa fa-eye" aria-hidden="true"></i></span>
+                        </div>
+                    </div>
+                    <div class="error" id="error-repeatpw"></div>
+                    <div>
+                        <label for="datepicker">Fecha de nacimiento</label>
+                        <input type="text" id="datepicker" name="datepicker">
+                    </div>
+                    <div class="error" id="error-datepicker"></div>
+                    <div>
+                        <label for="country">País</label>
+                        <select name="country" id="country">
+                            <option value="">--Seleccione</option>
+                            <option value="AR">Argentina</option>
+                            <option value="BO">Bolivia</option>
+                            <option value="BR">Brasil</option>
+                        </select>
+                    </div>
+                    <div class="error" id="error-country"></div>
 
-                <div class="accept-terms">
-                    <input type="checkbox" id="terms" name="terms">
-                    <label for="terms">Acepto los <a href="./index.html">términos y condiciones</a></label>
+                    <div class="accept-terms">
+                        <input type="checkbox" id="terms" name="terms">
+                        <label for="terms">Acepto los <a href="./index.html">términos y condiciones</a></label>
+                    </div>
+                    </div>
+                    <div class="form-actions">
+                    <input type="hidden" name="id-user" id="id-movie">
+                    <input type="hidden" name="is-admin" id="is-admin" value="0">
+                    <button type="submit" id="btn-send">Darme de alta</button>
                 </div>
-                </div>
-            <div class="form-actions">
-                <button type="submit" id="btn-send">Darme de alta</button>
-            </div>
-        </form>
-    </div>
+            </form>
+        </div>
 </main>
 
     <footer>
@@ -115,6 +117,7 @@
         </ul>
     </footer>
     <script src="./js/validation-register.js"></script>
+    <script src="./js/register.js"></script>
 </body>
 
 </html>
